fix spacing

--- a/style.css
+++ b/style.css
@@ -37,6 +37,18 @@ body {
 
 	}
 
+	.skills {
+		margin: 0px;;
+		padding: 0px;
+
+	}
+	
+	.contact {
+		margin: 0px;
+		padding: 0px;
+	}
+	
+
 	
 }
 
